--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
 <title>廖小敏-博客</title>
 <link rel="shortcut icon" href="boke.ico"/>
 <style>	
-  #d1 {
+  #beijing {
           position: absolute;
           width:1024px;
-          height:1850px;
+          height:100%;
           background:#52afdd;}
 </style>
 </head>
 <body>
-	<div id="d1">
+	<div id="beijing">
   
   </div>
 </body>
