--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
           position: absolute;
           width:1024px;
           height:100%;
-          background:#52afdd;}
+          background:#3dd;}
 </style>
 </head>
 <body>
