--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   #beijing {
           position: absolute;
           width:1024px;
-          height:100%;
+          height:100%n;
           background:#3dd;}
 </style>
 </head>
