--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
           position: absolute;
           width:1024px;
           height:100%;
-          background:#3dd;}
+          background:#f69;}
 </style>
 </head>
 <body>
@@ -19,7 +19,7 @@
 
 
 
-  <p>1.0</p>
+  <p>1.1</p>
   </div>
 </body>
 </html>
