--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   #beijing {
           position: absolute;
           width:1024px;
-          height:100%;
+          height:2048px;
           background:#f69;}
 </style>
 </head>
@@ -19,7 +19,7 @@
 
 
 
-  <p>1.1</p>
+  <p>1.2</p>
   </div>
 </body>
 </html>
