--- a/index.html
+++ b/index.html
@@ -151,10 +151,13 @@ div.desc {
 
 <div class="img">
       <img src="7.jpg" alt="图片文本描述">
-      <div class="desc">更体会你的感受</div>
+      <div class="desc">照顾会你的感受</div>
 </div>
 
-
+<div class="img">
+      <img src="8.jpg" alt="图片文本描述">
+      <div class="desc">不让你生气</div>
+</div>
 
 
 
