--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@ div.desc {
 
 <br/>
 <h1 id="titou">
-<span style="color:	#FF0000">任</span>
-<span style="color:	#FF8C00">时</span>
-<span style="color:#FFD700">间</span>
+<span style="color:#FF0000">任</span>
+<span style="color:#FF8C00">时</span>
+<span style="color:#FFD700">光</span>
 <span style="color:#3CB371">匆</span>
 <span style="color:#5F9EA0">匆</span>
 <span style="color:	#0000FF">流</span>
