--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8"> 
-<title>LXM</title>  
+<title>廖小敏</title>  
 <style>	
   #beijing {
                 width:1024px;
